# laboratory-sensor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lab-sensor.cpp  lab-sensor.h
hardware/enclosure/: case-bottom.step  case-top.step  enclosure.3mf  faceplate.step
hardware/printed_circuit_board/gbr_files/: lab-env-sensor-hw-B_Cu.gbr  lab-env-sensor-hw-B_Mask.gbr  lab-env-sensor-hw-B_Paste.gbr  lab-env-sensor-hw-B_Silkscreen.gbr  lab-env-sensor-hw-Edge_Cuts.gbr  lab-env-sensor-hw-F_Cu.gbr  lab-env-sensor-hw-F_Mask.gbr  lab-env-sensor-hw-F_Paste.gbr  lab-env-sensor-hw-F_Silkscreen.gbr  lab-env-sensor-hw-job.gbrjob
hardware/printed_circuit_board/kicad_files/: lab-env-sensor-hw.kicad_pcb  lab-env-sensor-hw.kicad_sch
